<resources>
    <string name="app_name">Green Pass App</string>

    <string name="title_activity_main">Green Pass App</string>
    <string name="title_home">Green Pass</string>
    <string name="title_login">Profile</string>
    <string name="title_check">Check</string>
    <string name="title_settings">Settings</string>
    <string name="title_admin">Admin</string>
    <string name="title_pass_dialog">GREEN PASS</string>
    <string name="title_scanner">Scanner</string>

    <string name="green_pass">GREEN PASS</string>

    <!-- home -->
    <string name="home_title_1">Show your Green Pass!</string>
    <string name="home_title_2">Scan a SafeEntry QR code!</string>

    <!-- login -->
    <string name="hint_text_nric">NRIC</string>
    <string name="error_invalid_nric">Invalid NRIC!</string>
    <string name="error_long_nric">NRIC is a bit too long.</string>
    <string name="error_spam">Stop spamming.</string>

    <string name="hint_text_password">Password</string>
    <string name="error_invalid_password">Invalid password!</string>
    <string name="error_cannot_password">Invalid NRIC above!</string>

    <string name="help_text_password">The password is used for verification for the GREEN PASS.</string>

    <!-- check -->
    <string name="text_check_title">Check Other People</string>
    <string name="hint_text_check_nric">NRIC</string>

    <string name="text_check_result">Result: %s</string>
    <string name="text_check_result_true">GREEN PASS</string>
    <string name="text_check_result_false">RED PASS</string>

    <!-- admin -->
    <string name="text_admin_title">You are an Admin!</string>
    <string name="text_admin_title_2">Retrieve a user\'s password here:</string>

    <string name="hint_text_admin_username">NRIC</string>
    <string name="text_password_result">Password: %s</string>

    <string name="admin_hack_toast">You are %d steps away from becoming an admin.</string>
    <string name="admin_hack_toast_one">You are 1 step away from becoming an admin.</string>
    <string name="admin_open_toast_first_time">Opening admin dialog…</string>
    <string name="admin_open_toast">You are now an admin!</string>

    <!-- buttons -->
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_check">Check</string>
    <string name="action_get_password">Copy password!</string>
    <string name="action_copy">Copy</string>
    <string name="action_open_green_pass">Open Green Pass</string>
    <string name="action_open_qr_scanner">Open QR Scanner</string>

    <string name="intent_web_title">Open in Browser</string>

    <!-- notifications -->
    <string name="notification_channel_name">Green Pass App</string>
    <string name="notification_channel_description">GREEN PASS</string>

</resources>