<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.greenpassapp.ui.greenPass.GreenPassFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_green_pass" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.greenpassapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
    </fragment>

    <fragment
        android:id="@+id/navigation_check"
        android:name="com.example.greenpassapp.ui.check.CheckFragment"
        android:label="@string/title_check"
        tools:layout="@layout/fragment_check" >
    </fragment>

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.example.greenpassapp.ui.scan.ScanFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scan" >
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.greenpassapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/settings_xml" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_pass_dialog"
            app:destination="@id/navigation_pass_dialog" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_scanner"
            app:destination="@id/navigation_scanner" />
    </fragment>
    <!--        tools:layout="@layout/fragment_settings" -->

    <fragment
        android:id="@+id/navigation_pass_dialog"
        android:name="com.example.greenpassapp.ui.PassDialog"
        android:label="@string/title_pass_dialog"
        tools:layout="@layout/pass_dialog_layout" />


</navigation>